# byteling

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
docs/: ARCHITECTURE.md  V3.md  V3_PLAN.md  V4.md  V4_PLAN.md
src/: App.css  App.tsx  Chat.css  Chat.tsx  Clinic.css  Clinic.tsx  Creature.css  Creature.tsx  Gallery.tsx  Settings.tsx  Shop.tsx  SpeechBubble.css  SpeechBubble.tsx  Vitals.tsx  Wardrobe.tsx  activityBrain.ts  lines.ts  main.tsx  roaming.ts  useChatter.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/care/: groom.rs  mod.rs
src-tauri/src/personality/: groq.rs  mod.rs
src-tauri/src/save/: mod.rs
src-tauri/src/sensors/: foreground.rs  gpu.rs  machine.rs  mod.rs  storage.rs  system.rs
src-tauri/src/sim/: engine.rs  mod.rs  mood.rs  needs.rs  species.rs
src/effects/: TrailEffect.tsx
src/pets/: PetView.tsx  activeCharacter.ts  registry.ts  types.ts
src/pets/renderers/: CatRenderer.css  CatRenderer.tsx  CreatureRenderer.tsx
src/pets/wearables/: registry.ts  types.ts  wearables.css
src/widgets/: WidgetLayer.tsx  registry.ts  types.ts  widgets.css
src/widgets/items/: Placeholder.tsx
src/widgets/items/Clock/: Clock3D.tsx  (+1 more)
web/app/: globals.css  layout.tsx  page.tsx
web/app/download/: page.tsx
web/components/byteling/: SiteByteling.tsx  SiteCreature.css  SiteCreature.tsx
web/components/layout/: Footer.tsx  Header.tsx
web/lib/: releases.ts
web/lib/byteling/: lines.ts  species.ts  useSectionWatcher.ts
(+4 files in other folders)
