[package]
name = "byteling"
version = "3.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "byteling_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.39.6"
nvml-wrapper = "0.12.1"
sha2 = "0.11.0"
windows = { version = "0.62.2", features = ["Win32_UI_Shell", "Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_System_Threading", "Win32_System_ProcessStatus", "Win32_UI_Accessibility"] }
battery = "0.7.8"
tokio = { version = "1.52.3", features = ["rt-multi-thread"] }
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls", "http2", "charset"] }
tauri-plugin-autostart = "2.5.1"

